# Health-Informant

./: .breakpoints  README.md  pyproject.toml
app/: app.py  styles.css  utils.py
app/static/: darkmode.js  script.js  styles.css
app/templates/: base.html  contact.html  covid.html  index.html  navbar.html  news.html
unused/: countries.txt  help.txt  justincase.txt  news.js  unused.py  unused.txt
